2007-11-25  Akim Demaille  <akim@lrde.epita.fr>

	Define and use register_action.
	* lib/Automake/Rule.pm: Fix a few typos in the doc.
	(&rule): Use || to simplify the code.
	(&register_action): New.
	Export it.
	* automake.in (&handle_factored_dependencies, &file_contents_internal):
	Use it.

2007-11-25  Akim Demaille  <akim@lrde.epita.fr>

	* bootstrap: Fix typos on redirections.

2007-11-24  Akim Demaille  <akim@lrde.epita.fr>

	Skip comments and empty lines in dirlist in the tests.
	* defs.in (extra_includes): Skip comments and empty lines in dirlist.

2007-11-24  Akim Demaille  <akim@lrde.epita.fr>

	Ternary operator in lib/am files.
	* automake.in (&transform_token): New.
	(&transform): Use it.
	Support %KEY?TRUE:FALSE%.
	(&make_paragraphs): Adjust the regexp to call %transform.
	* lib/am/data.am, lib/am/libs.am, lib/am/lisp.am, lib/am/ltlib.am,
	* lib/am/progs.am, lib/am/python.am, lib/am/scripts.am:
	Use %KEY?TRUE:FALSE%.
	* lib/am/inst-vars.am (am__strip_dir): Assign the result to f
	to be more alike am__vpath_adj.
	Adjust dependencies.

2007-11-24  Akim Demaille  <demaille@gostai.com>

	* automake.in: Normalize white spaces.

2007-11-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac (ACLOCAL, AUTOMAKE): Fix quoting for rebuilding
	rules, if the absolute build directory name contains white space.

2007-11-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* aclocal.in (trace_used_macros): Quote input files.

	* lib/ylwrap: Cope with white space in `PROGRAM' and `pwd`.

	* lib/am/tags.am (ID, TAGS, CTAGS): Make awk scripts portable again.
	(CTAGS): Drop unneeded variable `here'.

2007-11-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/output13.test: New test.
	* tests/Makefile.am: Adjust.
	Prompted by report from Bruno Haible in
	<http://lists.gnu.org/archive/html/bug-gnulib/2007-10/msg00479.html>.

	Fix signal handling in aclocal.
	* aclocal.in (unlink_tmp): If invoked by a signal, note so