@@ -39,8 +39,7 @@ install-%DIR%LIBRARIES: $(%DIR%_LIBRARIES)
 ## Compute basename of source file.  Unless this is a nobase_ target, we
 ## want to install 'python/foo.py' as '$(DESTDIR)$(%NDIR%dir)/foo.yo',
 ## not '$(DESTDIR)$(%NDIR%dir)/python/foo.yo'.
-?BASE?	    f=$(am__strip_dir) \
-?!BASE?	    f=$$p; \
+	    %BASE?$(am__strip_dir):f=$$p;% \
 	    echo " $(%DIR%LIBRARIES_INSTALL) '$$p' '$(DESTDIR)$(%NDIR%dir)/$$f'"; \
 	    $(%DIR%LIBRARIES_INSTALL) "$$p" "$(DESTDIR)$(%NDIR%dir)/$$f"; \
 	  else :; fi; \
@@ -53,7 +52,7 @@ install-%DIR%LIBRARIES: $(%DIR%_LIBRARIES)
 	@$(POST_INSTALL)
 	@list='$(%DIR%_LIBRARIES)'; for p in $$list; do \
 	  if test -f $$p; then \
-?BASE?	    $(am__strip_dir) \
+	    %BASE?$(am__strip_dir):f=$$p;% \
 ## Must ranlib after installing because mod time changes.
 	    echo " $(RANLIB) '$(DESTDIR)$(%NDIR%dir)/$$f'"; \
 	    $(RANLIB) "$(DESTDIR)$(%NDIR%dir)/$$f"; \
@@ -71,9 +70,9 @@ if %?INSTALL%
 uninstall-%DIR%LIBRARIES:
 	@$(NORMAL_UNINSTALL)
 	@list='$(%DIR%_LIBRARIES)'; for p in $$list; do \
-?BASE?	  $(am__strip_dir) \
-	  echo " rm -f '$(DESTDIR)$(%NDIR%dir)/$$p'"; \
-	  rm -f "$(DESTDIR)$(%NDIR%dir)/$$p"; \
+	  %BASE?$(am__strip_dir):f=$$p;% \
+	  echo " rm -f '$(DESTDIR)$(%NDIR%dir)/$$f'"; \
+	  rm -f "$(DESTDIR)$(%NDIR%dir)/$$f"; \
 	done
 endif %?INSTALL%
 
