@@ -39,7 +39,7 @@ install-%DIR%LTLIBRARIES: $(%DIR%_LTLIBRARIES)
 ## Compute basename of source file.  Unless this is a nobase_ target, we
 ## want to install 'python/foo.py' as '$(DESTDIR)$(%NDIR%dir)/foo.yo',
 ## not '$(DESTDIR)$(%NDIR%dir)/python/foo.yo'.
-	    %BASE?$(am__strip_dir):f=$$p%; \
+	    %BASE?$(am__strip_dir):f=$$p;% \
 ## Note that we explicitly set the libtool mode.  This avoids any lossage
 ## if the program doesn't have a name that libtool expects.
 ## Use INSTALL and not INSTALL_DATA because libtool knows the right
