@@ -1,5 +1,11 @@
 2007-11-25  Akim Demaille  <akim@lrde.epita.fr>
 
+	Fix uses of am__strip_dir.
+	* lib/am/libs.am, lib/am/ltlib.am: Catch up with the change of
+	definition of am__strip_dir.
+
+2007-11-25  Akim Demaille  <akim@lrde.epita.fr>
+
 	Define and use register_action.
 	* lib/Automake/Rule.pm: Fix a few typos in the doc.
 	(&rule): Use || to simplify the code.
